# smart-streetlight-monitoring-system

./: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  migrations.py  models.py  schemas.py
backend/app/services/: mqtt_bridge.py  realtime.py  telemetry_rules.py
backend/app/static/: console.html
backend/deploy/: streetlight-backend.env.example  streetlight-backend.service
backend/tests/: test_mqtt_bridge.py
deploy/: mosquitto.conf
esp32/: README.md
esp32/new/sketch_apr30a/: sketch_apr30a.ino
esp32/streetlight_controller/: streetlight_controller.ino  streetlight_controller.ino.bak
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/streetlight_app/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/src/: app.dart
flutter_app/lib/src/core/: api_client.dart  app_config.dart  models.dart  realtime_service.dart  theme.dart
flutter_app/lib/src/features/auth/: auth_controller.dart  login_screen.dart
flutter_app/lib/src/features/dashboard/: dashboard_screen.dart
flutter_app/lib/src/features/device_detail/: device_detail_screen.dart
flutter_app/lib/src/shared/widgets/: metric_card.dart  panel_card.dart  status_badge.dart
flutter_app/test/: core_models_test.dart
